--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
   "env": {
   "METHOD": "aes-256-cfb",
   "PASSWORD": "a123456",
-  "SERVER_ADDRESS": "0.0.0.0",
-  "SERVER_PORT": "8388",
-    "PORT": "8388"
+  "SERVER_ADDRESS": "0.0.0.0"
 }
 }
 }
