--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "env": {
   "METHOD": "aes-256-cfb",
   "PASSWORD": "a123456",
-  "SERVER_ADDRESS": "0.0.0.0"
+  "SERVER_ADDRESS": "0.0.0.0",
+  "SERVER_PORT": 80
 }
 }
 }
